[metadata]
name = PushyBullet
version = 1.5.2
author = Konstantin Stepanov
author-email = me@kstep.me
summary = PushBullet APIv2 python bindings
description-file = README.md
home-page = http://github.com/kstep/pushybullet/
classifier =
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Topic :: Internet
    Development Status :: 4 - Beta
    Environment :: Console
#requires-dist = requests
    #websocket-client
    #dateutil
    #magic

[files]
modules = pushybullet
scripts = pb
extra_files = setup.py README.md

